--- a/session-one/JS/index.html
+++ b/session-one/JS/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JavaScript Refresher</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="./main.js" defer type="module"></script>
+  <script src="./array/main.js" defer type="module"></script>
 </head>
 
 <body>
