--- a/session-one/JS/index.html
+++ b/session-one/JS/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JavaScript Refresher</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="./array/main.js" type="module"></script>
+  <script src="./fetch/main.js" type="module"></script>
 </head>
 
 <body>
@@ -23,6 +23,10 @@
         <li><a href="https://www.udemy.com/course/javascript-the-complete-guide-2020-beginner-advanced/"
             target="_blank">JavaScript: Complete Guide (Udemy)</a></li>
       </ul>
+    </div>
+
+    <div id="product">
+      <h1 id="title">Pippo</h1>
     </div>
   </div>
 </body>
