--- a/session-one/js-todo-app/index.html
+++ b/session-one/js-todo-app/index.html
@@ -16,6 +16,11 @@
     <button id="add-todo" class="btn btn-primary mb-2">Add Todo</button>
     <ul id="todo-list" class="list-group">
       <!-- Todo items will be added here -->
+      <!-- Example -->
+      <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+        test
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </li> -->
     </ul>
   </div>
 </body>
